Align text and prevent click on active item

--- a/client/src/pages/Reading/assets/styles/ReadingPagination.scss
+++ b/client/src/pages/Reading/assets/styles/ReadingPagination.scss
@@ -18,6 +18,11 @@
       position: relative;
 
       .swiper-slide-active {
+        a {
+          pointer-events: none;
+          cursor: default;
+        }
+
         .content {
           color: variables.$primary-dark;
         }
@@ -48,6 +53,7 @@
       font-weight: 600;
       color: $color;
       height: 44px;
+      text-align: center;
       @include mixins.multiLineClamp(2);
     }
   }
